--- a/sub_trouble/sub_trouble.html
+++ b/sub_trouble/sub_trouble.html
@@ -37,7 +37,7 @@
 
 		window.onclick = function(event) {
   			if (event.target != document.getElementById("projects-dropdown-button")) {
-				document.getElementsByClassName("projects-dd-content")[0].classList.toggle("projects-dd-content-shown");
+				document.getElementsByClassName("projects-dd-content")[0].classList.remove("projects-dd-content-shown");
     		}
   		}</script>
     <div id="primary">
