Download source link now directs users to the releases page

--- a/dodger/dodger.html
+++ b/dodger/dodger.html
@@ -43,7 +43,7 @@
     <div id="primary">
       <h2 id="project-name">Dodger</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/pigcoder3/Dodger/releases">
+        <a href="https://github.com/pigcoder3/Dodger">
           <img id="project-img" src="dodger.png"></img>
         </a>
         <span id="project-desc">Dodger is a game that puts the player, a green ball, in a field where an endless onslaught of lethal red squares races toward the top of the screen. The goal is to survive as long as possible.</span>
