--- a/talk/talk.html
+++ b/talk/talk.html
@@ -54,7 +54,7 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/pigcoder3/Talk">Github</a>
+              <a href="https://github.com/pigcoder3/Talk/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
