Actually fixed links

--- a/tetris/tetris.html
+++ b/tetris/tetris.html
@@ -43,7 +43,7 @@
     <div id="primary">
       <h2 id="project-name">Tetris</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/pigcoder3/Tetris/releases">
+        <a href="https://github.com/pigcoder3/Tetris">
           <img id="project-img" src="tetris.png"></img>
         </a>
         <span id="project-desc">This game is a clone of the original Tetris franchise. The player must fill as many lines as possible before the blocks stack to the top of the playing field.</span>
@@ -54,7 +54,7 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/pigcoder3/Tetris/releases/releases">Github</a>
+              <a href="https://github.com/pigcoder3/Tetris/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
