Updated screenshots with version 1.2.3

--- a/talk/talk.html
+++ b/talk/talk.html
@@ -79,10 +79,12 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/connected.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/room.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/privateMessage.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/scroll.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/users.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/help.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/makeroom.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/newroom.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/namechange.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/leave.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
