Added the calc project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <a class="project-link" href="https://pigcoder3.github.io/tetris/tetris.html">Tetris</a>
           <a class="project-link" href="https://pigcoder3.github.io/minesweeper/minesweeper.html">Minesweeper</a>
           <a class="project-link" href="https://pigcoder3.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="https://pigcoder3.github.io/calc/calc.html">Calc</a>
           <a class="project-link" href="https://pigcoder3.github.io/talk/talk.html">Talk</a>
         </div>
       </div>
@@ -83,6 +84,15 @@
               <span class="project_desc">Sea-Based Defense</span>
             </div>
             <img src="sub_trouble/sub_trouble.png"></img>
+          </a>
+        </div>
+        <div class="content_container project_container">
+          <a href="calc/calc.html">
+            <div class="project-desc-container">
+              <span class="project_name">Calc</span>
+              <span class="project_desc">Terminal Calculator</span>
+            </div>
+            <img src="calc/calc.png"></img>
           </a>
         </div>
         <div class="content_container project_container">
