--- a/calc/calc.html
+++ b/calc/calc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Talk - Sean Johnson</title>
+    <title>Calc - Sean Johnson</title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
     <script type="text/javascript" src="../stickynav.js"></script>
     <link rel="stylesheet" href="../navbar.css"></link>
@@ -42,12 +42,12 @@
     		}
   		}</script>
     <div id="primary">
-      <h2 id="project-name">Talk</h2>
+      <h2 id="project-name">Calc</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/pigcoder3/Talk">
-          <img id="project-img" src="talk.png"></img>
+        <a href="https://github.com/pigcoder3/calc">
+          <img id="project-img" src="calc.png"></img>
         </a>
-        <span id="project-desc">Talk is a simple server based chat system. Users communicate on a linux and macos only text-based environment. There is no running dedicated server, so if you wish to use it, you must run a server yourself.</span>
+        <span id="project-desc">Calc is a simple terminal calculator that supports addition, subtraction, multiplication, division, exponents, roots, absolute value, and parenthesis. You can get steps to calculate the equation and output the result in scientific notation.</span>
       </div>
       <div id="technical-info">
         <div class="content-container" id="download">
@@ -55,7 +55,7 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/pigcoder3/Talk/releases">Github</a>
+              <a href="https://github.com/pigcoder3/calc/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
@@ -67,8 +67,7 @@
           <span class="subheader" id="requirements-header">Requirements</span>
           <div class="container-body">
             <ul>
-              <li>Linux or MacOs</li>
-              <li>ncurses</li>
+              <li>None</li>
             </ul>
           </div>
         </div>
@@ -80,12 +79,10 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/users.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/help.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/makeroom.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/newroom.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/namechange.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/leave.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/calc/gallery/calc.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/calc/gallery/help.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/calc/gallery/average_equation.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/calc/gallery/infinity.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
