--- a/sub_trouble/sub_trouble.html
+++ b/sub_trouble/sub_trouble.html
@@ -19,6 +19,7 @@
           <a class="project-link" href="https://pigcoder3.github.io/tetris/tetris.html">Tetris</a>
           <a class="project-link" href="https://pigcoder3.github.io/minesweeper/minesweeper.html">Minesweeper</a>
           <a class="project-link" href="https://pigcoder3.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="https://pigcoder3.github.io/calc/calc.html">Calc</a>
           <a class="project-link" href="https://pigcoder3.github.io/talk/talk.html">Talk</a>
         </div>
       </div>
