Updated all links to work with the new web address

--- a/minesweeper/minesweeper.html
+++ b/minesweeper/minesweeper.html
@@ -15,19 +15,19 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="https://pigcoder3.github.io/dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="https://pigcoder3.github.io/tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="https://pigcoder3.github.io/minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="https://pigcoder3.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="https://pigcoder3.github.io/calc/calc.html">Calc</a>
-          <a class="project-link" href="https://pigcoder3.github.io/talk/talk.html">Talk</a>
+          <a class="project-link" href="https://seanmjohns.github.io/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="https://seanmjohns.github.io/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="https://seanmjohns.github.io/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="https://seanmjohns.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="https://seanmjohns.github.io/calc/calc.html">Calc</a>
+          <a class="project-link" href="https://seanmjohns.github.io/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/contact.html">Contact</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
@@ -44,7 +44,7 @@
     <div id="primary">
       <h2 id="project-name">Minesweeper</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/pigcoder3/Minesweeper">
+        <a href="https://github.com/seanmjohns/Minesweeper">
           <img id="project-img" src="minesweeper.png"></img>
         </a>
         <span id="project-desc">This game is a take on the classic minesweeper game. The player must flag all mines without uncovering a single one. If one is uncovered, the game is lost.</span>
@@ -55,11 +55,11 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/pigcoder3/Minesweeper/releases">Github</a>
+              <a href="https://github.com/seanmjohns/Minesweeper/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
-              <a href="https://pigcoder3.github.io/minesweeper/minesweeper-2.1.jar">minesweeper-2.1.jar</a>
+              <a href="https://seanmjohns.github.io/minesweeper/minesweeper-2.1.jar">minesweeper-2.1.jar</a>
             </div>
           </div>
         </div>
@@ -79,11 +79,11 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="https://pigcoder3.github.io/minesweeper/gallery/changingsize.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/minesweeper/gallery/ingame.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/minesweeper/gallery/gamover.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/minesweeper/gallery/gamewon.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/minesweeper/gallery/paused.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/minesweeper/gallery/changingsize.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/minesweeper/gallery/ingame.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/minesweeper/gallery/gamover.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/minesweeper/gallery/gamewon.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/minesweeper/gallery/paused.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
