--- a/sub_trouble/sub_trouble.html
+++ b/sub_trouble/sub_trouble.html
@@ -15,19 +15,19 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="https://pigcoder3.github.io/dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="https://pigcoder3.github.io/tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="https://pigcoder3.github.io/minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="https://pigcoder3.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="https://pigcoder3.github.io/calc/calc.html">Calc</a>
-          <a class="project-link" href="https://pigcoder3.github.io/talk/talk.html">Talk</a>
+          <a class="project-link" href="https://seanmjohns.github.io/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="https://seanmjohns.github.io/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="https://seanmjohns.github.io/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="https://seanmjohns.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="https://seanmjohns.github.io/calc/calc.html">Calc</a>
+          <a class="project-link" href="https://seanmjohns.github.io/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/contact.html">Contact</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
@@ -44,7 +44,7 @@
     <div id="primary">
       <h2 id="project-name">Sub Trouble</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/pigcoder3/Submarine-Trouble">
+        <a href="https://github.com/seanmjohns/Submarine-Trouble">
           <img id="project-img" src="sub_trouble.png"></img>
         </a>
         <span id="project-desc">Submarine Trouble is a game that is set on an ocean. The player controls a destroyer and must defend him/herself from the enless wave of submarines lurking below, while they attack with accurate torpedoes. The only weapons provided are depth charges with a small damage radius. Survive for as long as possible.</span>
@@ -55,11 +55,11 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/pigcoder3/Submarine-Trouble/releases">Github</a>
+              <a href="https://github.com/seanmjohns/Submarine-Trouble/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
-              <a href="https://pigcoder3.github.io/sub_trouble/sub_trouble-1.5.jar">sub_trouble-1.5.jar</a>
+              <a href="https://seanmjohns.github.io/sub_trouble/sub_trouble-1.5.jar">sub_trouble-1.5.jar</a>
             </div>
           </div>
         </div>
@@ -79,10 +79,10 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="https://pigcoder3.github.io/sub_trouble/gallery/attacking.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/sub_trouble/gallery/home.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/sub_trouble/gallery/difficulties.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/sub_trouble/gallery/attacked.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/sub_trouble/gallery/attacking.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/sub_trouble/gallery/home.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/sub_trouble/gallery/difficulties.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/sub_trouble/gallery/attacked.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
