--- a/tetris/tetris.html
+++ b/tetris/tetris.html
@@ -15,19 +15,19 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="https://pigcoder3.github.io/dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="https://pigcoder3.github.io/tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="https://pigcoder3.github.io/minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="https://pigcoder3.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="https://pigcoder3.github.io/calc/calc.html">Calc</a>
-          <a class="project-link" href="https://pigcoder3.github.io/talk/talk.html">Talk</a>
+          <a class="project-link" href="https://seanmjohns.github.io/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="https://seanmjohns.github.io/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="https://seanmjohns.github.io/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="https://seanmjohns.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="https://seanmjohns.github.io/calc/calc.html">Calc</a>
+          <a class="project-link" href="https://seanmjohns.github.io/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/contact.html">Contact</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
@@ -44,7 +44,7 @@
     <div id="primary">
       <h2 id="project-name">Tetris</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/pigcoder3/Tetris">
+        <a href="https://github.com/seanmjohns/Tetris">
           <img id="project-img" src="tetris.png"></img>
         </a>
         <span id="project-desc">This game is a clone of the original Tetris franchise. The player must fill as many lines as possible before the blocks stack to the top of the playing field.</span>
@@ -55,11 +55,11 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/pigcoder3/Tetris/releases">Github</a>
+              <a href="https://github.com/seanmjohns/Tetris/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
-              <a href="https://pigcoder3.github.io/tetris/tetris-1.3.jar">tetris-1.3.jar</a>
+              <a href="https://seanmjohns.github.io/tetris/tetris-1.3.jar">tetris-1.3.jar</a>
             </div>
           </div>
         </div>
@@ -79,13 +79,13 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/ingame2.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/starting.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/juststarted.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/ingame.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/juststarted2.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/gameover.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/paused.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/tetris/gallery/ingame2.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/tetris/gallery/starting.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/tetris/gallery/juststarted.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/tetris/gallery/ingame.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/tetris/gallery/juststarted2.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/tetris/gallery/gameover.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/tetris/gallery/paused.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
