--- a/contact.html
+++ b/contact.html
@@ -15,19 +15,19 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="https://pigcoder3.github.io/dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="https://pigcoder3.github.io/tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="https://pigcoder3.github.io/minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="https://pigcoder3.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="https://pigcoder3.github.io/calc/calc.html">Calc</a>
-          <a class="project-link" href="https://pigcoder3.github.io/talk/talk.html">Talk</a>
+          <a class="project-link" href="https://seanmjohns.github.io/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="https://seanmjohns.github.io/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="https://seanmjohns.github.io/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="https://seanmjohns.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="https://seanmjohns.github.io/calc/calc.html">Calc</a>
+          <a class="project-link" href="https://seanmjohns.github.io/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/contact.html">Contact</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
@@ -44,10 +44,10 @@
     <div id="primary">
       <h2 id="contact-header">Contact</h2>
       <div class="content-container" id="github">
-        <a href="https://github.com/pigcoder3">
+        <a href="https://github.com/seanmjohns">
           <img src="github-logo.png" id="github-logo"></img>
         </a>
-        <span class="notes">You can contact me through GitHub (<strong>pigcoder3</strong>), although I do not check it very often.</span>
+        <span class="notes">You can contact me through GitHub (<strong>seanmjohns</strong>), although I do not check it very often.</span>
       </div>
       <div class="content-container" id="email">
         <img src="email.png" id="email-logo"></img>
