--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="https://pigcoder3.github.io/dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="https://pigcoder3.github.io/tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="https://pigcoder3.github.io/minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="https://pigcoder3.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="https://pigcoder3.github.io/calc/calc.html">Calc</a>
-          <a class="project-link" href="https://pigcoder3.github.io/talk/talk.html">Talk</a>
+          <a class="project-link" href="https://seanmjohns.github.io/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="https://seanmjohns.github.io/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="https://seanmjohns.github.io/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="https://seanmjohns.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="https://seanmjohns.github.io/calc/calc.html">Calc</a>
+          <a class="project-link" href="https://seanmjohns.github.io/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/contact.html">Contact</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
@@ -43,10 +43,10 @@
   		}</script>
     <div id="primary">
       <div class="content_container" id="intro">
-        <a href="https://github.com/pigcoder3">
+        <a href="https://github.com/seanmjohns">
           <img id="profile" src="github-profile.png" alt="github profile"></img>
         </a>
-        <span id="desc">I program for fun when I'm not overloaded with work from my high school classes. I am moderately fluent in Java, C, Python, and Bash.</span>
+        <span id="desc">I program for fun when I'm not overloaded with work from my high school classes. I am moderately fluent in Java, C, C++, Python, and Bash.</span>
       </div>
       <h2 id="projects_header">Projects</h2>
       <div id="projects">
