--- a/talk/talk.html
+++ b/talk/talk.html
@@ -15,19 +15,19 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="https://pigcoder3.github.io/dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="https://pigcoder3.github.io/tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="https://pigcoder3.github.io/minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="https://pigcoder3.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="https://pigcoder3.github.io/calc/calc.html">Calc</a>
-          <a class="project-link" href="https://pigcoder3.github.io/talk/talk.html">Talk</a>
+          <a class="project-link" href="https://seanmjohns.github.io/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="https://seanmjohns.github.io/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="https://seanmjohns.github.io/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="https://seanmjohns.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="https://seanmjohns.github.io/calc/calc.html">Calc</a>
+          <a class="project-link" href="https://seanmjohns.github.io/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://pigcoder3.github.io/contact.html">Contact</a>
+        <a class="nav-button" href="https://seanmjohns.github.io/contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
@@ -44,7 +44,7 @@
     <div id="primary">
       <h2 id="project-name">Talk</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/pigcoder3/Talk">
+        <a href="https://github.com/seanmjohns/Talk">
           <img id="project-img" src="talk.png"></img>
         </a>
         <span id="project-desc">Talk is a simple server based chat system. Users communicate on a linux and macos only text-based environment. There is no running dedicated server, so if you wish to use it, you must run a server yourself.</span>
@@ -55,7 +55,7 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/pigcoder3/Talk/releases">Github</a>
+              <a href="https://github.com/seanmjohns/Talk/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
@@ -80,12 +80,12 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/users.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/help.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/makeroom.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/newroom.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/namechange.png"></img>
-          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/leave.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/users.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/help.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/makeroom.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/newroom.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/namechange.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/leave.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
