Updated the calc gallery for the newest release

--- a/calc/calc.html
+++ b/calc/calc.html
@@ -47,7 +47,7 @@
         <a href="https://github.com/seanmjohns/calc">
           <img id="project-img" src="calc.png"></img>
         </a>
-        <span id="project-desc">Calc is a simple terminal calculator that supports addition, subtraction, multiplication, division, exponents, roots, absolute value, and parenthesis. You can get steps to calculate the equation and output the result in scientific notation.</span>
+        <span id="project-desc">Calc is a simple terminal calculator that supports addition, subtraction, multiplication, division, exponents, roots, absolute value, parenthesis, and trigonometric functions. You can get steps to calculate the expression and output the result in scientific notation.</span>
       </div>
       <div id="technical-info">
         <div class="content-container" id="download">
@@ -79,10 +79,10 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/calc.png"></img>
-          <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/help.png"></img>
-          <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/average_equation.png"></img>
-          <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/infinity.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/piping.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/steps.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/stdin.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/scientific_notation.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
