Actually fixed it

--- a/sub_trouble/sub_trouble.html
+++ b/sub_trouble/sub_trouble.html
@@ -47,7 +47,7 @@
         <a href="https://github.com/seanmjohns/Submarine-Trouble">
           <img id="project-img" src="sub_trouble.png"></img>
         </a>
-        <span id="project-desc">Submarine Trouble is a game that is set on an ocean. The player controls a destroyer and must defend him/herself from the enless wave of submarines lurking below, while they attack with accurate torpedoes. The only weapons provided are depth charges with a small damage radius. Survive for as long as possible.</span>
+        <span id="project-desc">Submarine Trouble is a game that is set on an ocean. The player controls a destroyer and must defend him/herself from the endless wave of submarines lurking below, while they attack with accurate torpedoes. The only weapons provided are depth charges with a small damage radius. Survive for as long as possible.</span>
       </div>
       <div id="technical-info">
         <div class="content-container" id="download">
