Updated calc's screenshot for the newest release (2.3)

--- a/calc/calc.html
+++ b/calc/calc.html
@@ -81,7 +81,7 @@
           </div>
           <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/piping.png"></img>
           <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/steps.png"></img>
-          <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/stdin.png"></img>
+          <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/console.png"></img>
           <img class="gallery-image" src="https://seanmjohns.github.io/calc/gallery/scientific_notation.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
