--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Sean Johnson</title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
     <script type="text/javascript" src="stickynav.js"></script>
     <link rel="stylesheet" href="navbar.css"></link>
