Now uses relative paths

--- a/talk/talk.html
+++ b/talk/talk.html
@@ -15,19 +15,19 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="https://seanmjohns.github.io/dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="https://seanmjohns.github.io/tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="https://seanmjohns.github.io/minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="https://seanmjohns.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="https://seanmjohns.github.io/calc/calc.html">Calc</a>
-          <a class="project-link" href="https://seanmjohns.github.io/talk/talk.html">Talk</a>
+          <a class="project-link" href="dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="calc/calc.html">Calc</a>
+          <a class="project-link" href="talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://seanmjohns.github.io/">Home</a>
+        <a class="nav-button" href="../index.html">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://seanmjohns.github.io/contact.html">Contact</a>
+        <a class="nav-button" href="../contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
@@ -80,12 +80,12 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/users.png"></img>
-          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/help.png"></img>
-          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/makeroom.png"></img>
-          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/newroom.png"></img>
-          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/namechange.png"></img>
-          <img class="gallery-image" src="https://seanmjohns.github.io/talk/gallery/leave.png"></img>
+          <img class="gallery-image" src="gallery/users.png"></img>
+          <img class="gallery-image" src="gallery/help.png"></img>
+          <img class="gallery-image" src="gallery/makeroom.png"></img>
+          <img class="gallery-image" src="gallery/newroom.png"></img>
+          <img class="gallery-image" src="gallery/namechange.png"></img>
+          <img class="gallery-image" src="gallery/leave.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
