--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sean Johnson</title>
+    <title></title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
     <script type="text/javascript" src="stickynav.js"></script>
     <link rel="stylesheet" href="navbar.css"></link>
@@ -15,19 +15,19 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="https://seanmjohns.github.io/dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="https://seanmjohns.github.io/tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="https://seanmjohns.github.io/minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="https://seanmjohns.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="https://seanmjohns.github.io/calc/calc.html">Calc</a>
-          <a class="project-link" href="https://seanmjohns.github.io/talk/talk.html">Talk</a>
+          <a class="project-link" href="dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="calc/calc.html">Calc</a>
+          <a class="project-link" href="talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://seanmjohns.github.io/">Home</a>
+        <a class="nav-button" href="index.html">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="https://seanmjohns.github.io/contact.html">Contact</a>
+        <a class="nav-button" href="contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
