Replaced borders with shadows, and project previews now expand when hovered

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         <a href="https://github.com/seanmjohns">
           <img src="github-logo.png" id="github-logo"></img>
         </a>
-        <span class="notes">You can contact me through GitHub (<strong>seanmjohns</strong>), although I do not check it very often.</span>
+        <span class="notes">You can contact me through GitHub (<strong>seanmjohns</strong>).</span>
       </div>
       <div class="content-container" id="email">
         <img src="email.png" id="email-logo"></img>
