--- a/calc/calc.html
+++ b/calc/calc.html
@@ -15,12 +15,12 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="calc/calc.html">Calc</a>
-          <a class="project-link" href="talk/talk.html">Talk</a>
+          <a class="project-link" href="../dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="../tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="../minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="../sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="../calc/calc.html">Calc</a>
+          <a class="project-link" href="../talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
@@ -80,7 +80,6 @@
             <span id="image-number">0 / 0</span>
           </div>
           <img class="gallery-image" src="gallery/piping.png"></img>
-          <img class="gallery-image" src="gallery/.DS_Store"></img>
           <img class="gallery-image" src="gallery/steps.png"></img>
           <img class="gallery-image" src="gallery/console.png"></img>
           <img class="gallery-image" src="gallery/scientific_notation.png"></img>
