--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
           <a class="project-link" href="minesweeper/minesweeper.html">Minesweeper</a>
           <a class="project-link" href="sub_trouble/sub_trouble.html">Sub Trouble</a>
           <a class="project-link" href="calc/calc.html">Calc</a>
+          <a class="project-link" href="textfighter/textfighter.html">Text Fighter</a>
           <a class="project-link" href="talk/talk.html">Talk</a>
         </div>
       </div>
