--- a/textfighter/textfighter.html
+++ b/textfighter/textfighter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Talk - Sean Johnson</title>
+    <title>Text Fighter - Sean Johnson</title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
     <script type="text/javascript" src="../stickynav.js"></script>
     <link rel="stylesheet" href="../navbar.css"></link>
@@ -43,12 +43,12 @@
     		}
   		}</script>
     <div id="primary">
-      <h2 id="project-name">Talk</h2>
+      <h2 id="project-name">Text Fighter</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/seanmjohns/Talk">
-          <img id="project-img" src="talk.png"></img>
+        <a href="https://github.com/seanmjohns/Text-Fighter">
+          <img id="project-img" src="textfighter.png"></img>
         </a>
-        <span id="project-desc">Talk is a simple server based chat system. Users communicate on a linux and macos only text-based environment. There is no running dedicated server, so if you wish to use it, you must run a server yourself.</span>
+        <span id="project-desc">Text Fighter is a game engine that allows the for creation of modpacks which can change the game slightly or completely rewrite it. There is a default pack that players do not have to download separately. All one has to do is download the jar are run it to play. Save files are free to be edited by the user to increase the possibilities. I personally enjoy Text Fighter due to its flexibility and ease.</span>
       </div>
       <div id="technical-info">
         <div class="content-container" id="download">
@@ -56,11 +56,11 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/seanmjohns/Talk/releases">Github</a>
+              <a href="https://github.com/seanmjohns/Text-Fighter/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
-              <a>-</a>
+              <a href="https://seanmjohns.github.io/textfighter/textfighter-1.2-HOTFIX-1.jar">textfighter-1.2-HOTFIX-1.jar</a>
             </div>
           </div>
         </div>
@@ -68,8 +68,7 @@
           <span class="subheader" id="requirements-header">Requirements</span>
           <div class="container-body">
             <ul>
-              <li>Linux or MacOs</li>
-              <li>ncurses</li>
+              <li>Java 8</li>
             </ul>
           </div>
         </div>
@@ -81,12 +80,10 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="gallery/users.png"></img>
-          <img class="gallery-image" src="gallery/help.png"></img>
-          <img class="gallery-image" src="gallery/makeroom.png"></img>
-          <img class="gallery-image" src="gallery/newroom.png"></img>
-          <img class="gallery-image" src="gallery/namechange.png"></img>
-          <img class="gallery-image" src="gallery/leave.png"></img>
+          <img class="gallery-image" src="gallery/menuchoices.png"></img>
+          <img class="gallery-image" src="gallery/enemiestofight.png"></img>
+          <img class="gallery-image" src="gallery/enemy_stats.png"></img>
+          <img class="gallery-image" src="gallery/player_stats.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
