--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <a class="project-link" href="minesweeper/minesweeper.html">Minesweeper</a>
           <a class="project-link" href="sub_trouble/sub_trouble.html">Sub Trouble</a>
           <a class="project-link" href="calc/calc.html">Calc</a>
+          <a class="project-link" href="textfighter/textfighter.html">Text Fighter</a>
           <a class="project-link" href="talk/talk.html">Talk</a>
         </div>
       </div>
@@ -93,6 +94,15 @@
               <span class="project_desc">Terminal Calculator</span>
             </div>
             <img src="calc/calc.png"></img>
+          </a>
+        </div>
+        <div class="content_container project_container">
+          <a href="textfighter/textfighter.html">
+            <div class="project-desc-container">
+              <span class="project_name">Text Fighter</span>
+              <span class="project_desc">Text Game Engine</span>
+            </div>
+            <img src="textfighter/textfighter.png"></img>
           </a>
         </div>
         <div class="content_container project_container">
