--- a/minesweeper/minesweeper.html
+++ b/minesweeper/minesweeper.html
@@ -15,12 +15,13 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="calc/calc.html">Calc</a>
-          <a class="project-link" href="talk/talk.html">Talk</a>
+          <a class="project-link" href="../dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="../tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="../minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="../sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="../calc/calc.html">Calc</a>
+          <a class="project-link" href="../textfighter/textfighter.html">Text Fighter</a>
+          <a class="project-link" href="../talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
