--- a/textfighter/textfighter.html
+++ b/textfighter/textfighter.html
@@ -60,7 +60,7 @@
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
-              <a href="https://seanmjohns.github.io/textfighter/textfighter-1.3.jar">textfighter-1.3.jar</a>
+              <a href="https://seanmjohns.github.io/textfighter/textfighter-1.3.1-snapshot-1.jar">textfighter-1.3.1-snapshot-1.jar</a>
             </div>
           </div>
         </div>
