Added my linkedin page to the contact page

--- a/contact.html
+++ b/contact.html
@@ -44,15 +44,21 @@
   		}</script>
     <div id="primary">
       <h2 id="contact-header">Contact</h2>
-      <div class="content-container" id="github">
+      <div class="content-container" id="github" title="github">
         <a href="https://github.com/seanmjohns">
           <img src="github-logo.png" id="github-logo"></img>
         </a>
-        <span class="notes">You can contact me through GitHub (<strong>seanmjohns</strong>).</span>
+        <span class="notes">You can contact me through GitHub (<strong><a href="https://github.com/seanmjohns" class="intextlink">seanmjohns</a></strong>).</span>
       </div>
-      <div class="content-container" id="email">
+      <div class="content-container" id="email" title="email">
         <img src="email.png" id="email-logo"></img>
         <span class="notes">Email me at <strong>seanmjohns1@gmail.com</strong>. I check my email often, so it is likely you will be able to get a hold of me.</span>
+      </div>
+      <div class="content-container" id="linkedin" title="linkedin">
+        <a href="https://linkedin.com/in/seanmjohns1">
+          <img src="LI-In-Bug.png" id="linkedin-logo"></img>
+        </a>
+        <span class="notes">Contact me through LinkedIn (<strong><a href="https://linkedin.com/in/seanmjohns1" class="intextlink">seanmjohns1</a></strong>).</span>
       </div>
     </div>
   </body>
