Apparently I didnt update the home page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   		}</script>
     <div id="primary">
       <div class="content_container" id="intro">
-        <a href="https://linkedin.com/in/seanmjohns1/">
+        <a href="https://linkedin.com/in/seanmjohns1/" title="linkedin">
           <img id="profile" src="images/github-profile.png" alt="github profile"></img>
         </a>
         <span id="desc">I program for fun when I'm not overloaded with work from my high school classes. I am moderately fluent in Java, Python, C, C++, and Bash.</span>
