Fixed linking issue in which the project links from the home page did not work

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h2 id="projects_header">Projects</h2>
       <div id="projects">
         <div class="content_container project_container">
-          <a href="dodger/dodger.html">
+          <a href="projects/dodger/dodger.html">
             <div class="project-desc-container">
               <span class="project_name">Dodger</span>
               <span class="project_desc">Fast-paced survival</span>
@@ -61,7 +61,7 @@
           </a>
         </div>
         <div class="content_container project_container">
-          <a href="tetris/tetris.html">
+          <a href="projects/tetris/tetris.html">
             <div class="project-desc-container">
               <span class="project_name">Tetris</span>
               <span class="project_desc">Fast-paced Classic</span>
@@ -70,7 +70,7 @@
           </a>
         </div>
         <div class="content_container project_container">
-          <a href="minesweeper/minesweeper.html">
+          <a href="projects/minesweeper/minesweeper.html">
             <div class="project-desc-container">
               <span class="project_name">Minesweeper</span>
               <span class="project_desc">Classic Puzzler</span>
@@ -79,7 +79,7 @@
           </a>
         </div>
         <div class="content_container project_container">
-          <a href="sub_trouble/sub_trouble.html">
+          <a href="projects/sub_trouble/sub_trouble.html">
             <div class="project-desc-container">
               <span class="project_name">Sub Trouble</span>
               <span class="project_desc">Sea-Based Defense</span>
@@ -88,7 +88,7 @@
           </a>
         </div>
         <div class="content_container project_container">
-          <a href="calc/calc.html">
+          <a href="projects/calc/calc.html">
             <div class="project-desc-container">
               <span class="project_name">Calc</span>
               <span class="project_desc">Terminal Calculator</span>
@@ -97,7 +97,7 @@
           </a>
         </div>
         <div class="content_container project_container">
-          <a href="textfighter/textfighter.html">
+          <a href="projects/textfighter/textfighter.html">
             <div class="project-desc-container">
               <span class="project_name">Text Fighter</span>
               <span class="project_desc">Text Game Engine</span>
@@ -106,7 +106,7 @@
           </a>
         </div>
         <div class="content_container project_container">
-          <a href="talk/talk.html">
+          <a href="projects/talk/talk.html">
             <div class="project-desc-container">
               <span class="project_name">Talk</span>
               <span class="project_desc">Client/Server Chat</span>
